tests/spec/emit/snapshots/binary_greater_than.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    7 > 2
  }
---
package main

func test() bool {
	return 7 > 2
}
