tests/spec/emit/snapshots/binary_greater_than_or_equal.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    10 >= 5
  }
---
package main

func test() bool {
	return 10 >= 5
}
