tests/spec/emit/snapshots/binary_inequality.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    5 != 3
  }
---
package main

func test() bool {
	return 5 != 3
}
