tests/spec/emit/snapshots/binary_left_hoisted_when_right_is_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let z = i + bump(&i)
    let _ = z
  }
---
package main

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	left := i
	z := left + bump(&i)
	_ = z
}
