tests/spec/emit/snapshots/binary_less_than.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    3 < 5
  }
---
package main

func test() bool {
	return 3 < 5
}
