tests/spec/emit/snapshots/binary_less_than_or_equal.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    5 <= 5
  }
---
package main

func test() bool {
	return 5 <= 5
}
