tests/spec/emit/snapshots/binary_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0b1010
  }
---
package main

func test() int {
	return 0b1010
}
