tests/spec/emit/snapshots/binary_logical_and.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    true && false
  }
---
package main

func test() bool {
	return true && false
}
