tests/spec/emit/snapshots/binary_logical_and_short_circuits_rhs_with_setup.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn track(flag: mut Ref<bool>) -> Result<int, error> {
    flag.* = true
    Ok(1)
  }
  
  fn test() {
    let mut ran = false
    if false && track(&ran).is_ok() {
      panic("body should not run")
    }
    if ran {
      panic("rhs evaluated despite short-circuit")
    }
  }
---
package main

func track(flag *bool) (int, error) {
	*flag = true
	return 1, nil
}

func test() {
	ran := false
	if false && func() bool {
		_, err := track(&ran)
		return err == nil
	}() {
		panic("body should not run")
	}
	if ran {
		panic("rhs evaluated despite short-circuit")
	}
}
