tests/spec/emit/snapshots/binary_logical_or.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    true || false
  }
---
package main

func test() bool {
	return true || false
}
