tests/spec/emit/snapshots/binary_logical_or_short_circuits_rhs_with_setup.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn track(flag: mut Ref<bool>) -> Result<int, error> {
    flag.* = true
    Ok(1)
  }
  
  fn test() {
    let mut ran = false
    if true || track(&ran).is_ok() {
      if ran {
        panic("rhs evaluated despite short-circuit")
      }
      return
    }
    panic("if-body should run")
  }
---
package main

func track(flag *bool) (int, error) {
	*flag = true
	return 1, nil
}

func test() {
	ran := false
	if true || func() bool {
		_, err := track(&ran)
		return err == nil
	}() {
		if ran {
			panic("rhs evaluated despite short-circuit")
		}
		return
	}
	panic("if-body should run")
}
